fix: spacing

--- a/src/assets/styles/components/track-chart.css
+++ b/src/assets/styles/components/track-chart.css
@@ -70,7 +70,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  max-width: 85%;
+  max-width: 80%;
 }
 
 .track__chart--timestamp {
